# nix-dots

./: .gitmodules  Issues.md  TODO.md  apparmor.nix  flake.nix  initial_setup.sh  notes.md  notes.nix  prompt.md  shell.nix
hosts/: default.nix
hosts/workstation/: hardware-configuration.nix
hosts/zephyrus/: hardware-configuration.nix
modules/home/: \  default.nix  prompt.md  starship.toml
modules/home/alacritty/: default.nix
modules/home/anyrun/: default.nix
modules/home/atuin/: default.nix
modules/home/bat/: default.nix
modules/home/brave/: default.nix
modules/home/caelestia/: default.nix  example.json  shell.json
modules/home/catppuccin/: default.nix
modules/home/cliphist/: default.nix
modules/home/dev/: default.nix
modules/home/dms/: default.nix  dms.nix
modules/home/doom/: default.nix  prompt.md
modules/home/doom-emacs/: ISSUES.md  colors.org  default.nix
modules/home/doom/doom.d/lsp-bridge/: lsp-bridge-quickstart.md  pyproject.toml
modules/home/dropbox/: default.nix
modules/home/emacs/: 1st-prompt.md  2nd-prompt.md  Emacs.org  ISSUES.md  Tasks.md  bak.el  changes.md  config.org  default.nix  dict.txt  early-init.el  early-init.txt  emacs.md  final-config.md  init.el  jupyter-functions.el  modeline.el  nano.nix  prompt.md  sample.md  sample.org
modules/home/eza/: default.nix
modules/home/fastfetch/: default.nix
modules/home/fd-find/: default.nix
modules/home/fish/: default.nix
modules/home/foot/: default.nix
modules/home/fzf/: default.nix
modules/home/gammastep/: default.nix
modules/home/git/: default.nix  git.nix
modules/home/hypridle/: default.nix
modules/home/hyprland/: autostart.nix  colors.nix  default.nix  env.nix  execs.nix  guide.md  hyprland.conf  keybindings.nix  keybindings.txt  misc.nix  monitor.nix  plugins.nix  pyprland.toml  pyprland.toml.bak  quickshells.md  rules.md  rules.nix  script.sh  scripts.nix  settings.nix  wsaction.nix
modules/home/hyprlock/: default.nix
modules/home/hyprpanel/: default.nix
modules/home/hyprpaper/: default.nix
modules/home/hyprpolkitagent/: default.nix
modules/home/hyprsunset/: default.nix
modules/home/imv/: default.nix
modules/home/keyring/: default.nix
modules/home/kitty/: default.nix
modules/home/lazygit/: default.nix
modules/home/mpv/: default.nix
modules/home/niri/: danksearch.nix  default.nix  dms.nix  dms.txt  fully_automated_guide.md  greeter.nix  niri.nix  niri.txt  prompt.md
modules/home/nvim/: TODO.md  core.nix  default.nix  keybindings.nix  keymappings.nix  lsp.nix  md  options.nix  plugins.nix  ui.nix
modules/home/nwg-dock-hyprland/: default.nix
modules/home/pay-respects/: default.nix
modules/home/pkgs/: default.nix
modules/home/python/: default.nix
modules/home/ripgrep/: default.nix
modules/home/schizofox/: default.nix
modules/home/scripts/: default.nix  default.nix.bak  fconf.fish  fe.fish  final-scripts.md  fkill.fish  fp.fish  fssh.fish  fuzzel-emoji.fish  launch_first_available.fish  nuke-nvim.fish  org-capture.fish  safe-rm.fish  se.fish  setup-github-keys.fish  wsaction.fish
modules/home/starship/: default.nix
modules/home/swappy/: default.nix
modules/home/texlive/: default.nix
modules/home/thefuck/: default.nix
modules/home/theming/: default.nix
modules/home/tldr/: default.nix
modules/home/tmux/: default.nix
modules/home/udiskie/: default.nix
modules/home/vanilla-emacs/: Emacs.org  TODO.md  default.nix  init.el  sample.md
modules/home/vscode/: default.nix  extensions.nix  keybindings.nix  usersettings.nix
modules/home/wofi/: default.nix
modules/home/xdg/: default.nix
modules/home/yazi/: default.nix  yazi-guide.md
modules/home/zathura/: default.nix
modules/home/zellij/: default.nix
modules/home/zen-browser/: default.nix
modules/home/zoxide/: default.nix
modules/home/zsh/: aliases.nix  default.nix
modules/system/: default.nix
modules/system/adguard/: default.nix
modules/system/asus/: default.nix
modules/system/bluetooth/: default.nix
modules/system/catppuccin/: default.nix
modules/system/clamav/: default.nix
modules/system/clipmenu/: default.nix
modules/system/console/: default.nix
modules/system/dbus/: default.nix
modules/system/environment/: default.nix
modules/system/fonts/: default.nix
modules/system/gdm/: default.nix
modules/system/gnupg/: default.nix
modules/system/graphics/: default.nix
modules/system/greetd/: default.nix
modules/system/greeter/: default.nix
modules/system/hardware/: default.nix
modules/system/hyprland/: default.nix
modules/system/intel/: default.nix
modules/system/kernel/: appimage.nix  bootloader.nix  default.nix  hardening.nix  kernel.nix  power.nix  sleep.nix
modules/system/logind/: default.nix
modules/system/ly/: default.nix
modules/system/misc/: console.nix  default.nix  flatpak.nix  i18n.nix  locale.nix  misc.nix  plex.nix
modules/system/network/: default.nix
modules/system/nix/: default.nix
modules/system/openssh/: default.nix
modules/system/optimized/: default.nix
modules/system/overlay/: default.nix
modules/system/pkgs/: default.nix
modules/system/polkit/: default.nix
modules/system/portal/: default.nix
modules/system/power/: default.nix
modules/system/proton/: default.nix  email.nix  vpn.nix
modules/system/seatd/: default.nix
modules/system/security/: default.nix
modules/system/services/: default.nix  disable-lid.nix
modules/system/shell/: default.nix
modules/system/sound/: default.nix
modules/system/stdenv/: default.nix
modules/system/sysprof/: default.nix
modules/system/systemd/: default.nix
modules/system/thunar/: default.nix
modules/system/users/: default.nix
modules/system/virtualization/: default.nix  podman.nix  (+2 more)
notes/: TODO.md  caelestia.md  examples.md  outside-emacs-pkgs.md  pyprland.md  selinux.md
overlays/: app2unit.nix
overlays/app2unit/: flake.nix
pkgs/: app2unit.nix
scripts/: autostart  chroot-install  hyprmenu  initial_setup  nixbuild
setup/: configuration.nix  hardware-configuration.nix  notes.md
tmp/: configuration.nix  prompt.md
(+70 files in other folders)
